--- a/lectures/08_regression_4.tex
+++ b/lectures/08_regression_4.tex
@@ -289,7 +289,7 @@
     \end{column}%
   \hfill%
   \begin{column}{.65\textwidth}
-    \includegraphics[width=\linewidth]{tibshiriani.png}
+    \includegraphics[width=\linewidth]{images/tibshiriani.png}
   \end{column}
 \end{columns}
 \end{frame}
@@ -300,7 +300,7 @@
   \item Well, it (and modified versions of it) have two very nice properties:
     \begin{itemize}
     \item very efficient estimators -- they predict $Y$ well
-    \item pick a subet of covariates, making model interpretaiton easier! 
+    \item pick a subet of covariates, making model interpretation easier! 
     \end{itemize}
   \item A quick aside on regularized estimators. Recall that for a
     given estimator $\hat{\theta}$ of $\theta$, we care a lot about
@@ -314,7 +314,7 @@
   \item So a nice feature of Lasso is that is has lower MSE than OLS
     in most cases, but the terms can be biased
     \begin{itemize}
-    \item This is true of all ML approaches generally
+    \item This is true of ML approaches generally
     \end{itemize}
   \end{wideitemize}
 \end{frame}
@@ -339,7 +339,7 @@
   \hfill%
   \begin{column}{.5\textwidth}
     Zou (2006):
-    \includegraphics[width=\linewidth]{oracle_property.png}
+    \includegraphics[width=\linewidth]{images/oracle_property.png}
   \end{column}
 \end{columns}
 \end{frame}
@@ -357,7 +357,7 @@
       \item Given a true estimand $\theta_{0}$, we can consider the
         convergence of $\hat{\theta}$ to that $\theta_{0}$
       \end{itemize}
-    \item But, this holds fixed our vlaue of $\theta_{0}$ -- we
+    \item But, this holds fixed our value of $\theta_{0}$ -- we
       typically want \emph{uniform} convergence
       \begin{itemize}
       \item E.g. the convergence can be done across all values of
@@ -370,8 +370,8 @@
 \end{frame}
 
 \begin{frame}{Leeb and Potscher (2008)}
-  \includegraphics[width=\linewidth]{leebpotscher2.png}\\
-  \includegraphics[width=\linewidth]{leebpotscher3.png}
+  \includegraphics[width=\linewidth]{images/leebpotscher2.png}\\
+  \includegraphics[width=\linewidth]{images/leebpotscher3.png}
 \end{frame}
 
 \begin{frame}{Back to lasso's  oracle property}
@@ -415,7 +415,7 @@
     \end{column}%
   \hfill%
   \begin{column}{.4\textwidth}
-    \includegraphics[width=\linewidth]{hodges.png}
+    \includegraphics[width=\linewidth]{images/hodges.png}
   \end{column}
 \end{columns}
 \end{frame}
@@ -463,7 +463,7 @@
 
 \begin{frame}{The Geometry of Puffer}
 \begin{center}
-  \includegraphics[width=0.65\linewidth]{puffer.png}
+  \includegraphics[width=0.65\linewidth]{images/puffer.png}
 \end{center}
 \end{frame}
 
@@ -611,7 +611,7 @@ $$\hat{y} \;\; \text{vs.} \;\; \hat{\beta}$$
 
 \begin{frame}{Why would we need ML if RCT?}
   Regarding ML and RCTs:
-  \includegraphics[width=\linewidth]{duflo_chernozhukov_ECMA.png}
+  \includegraphics[width=\linewidth]{images/duflo_chernozhukov_ECMA.png}
   
   \begin{itemize}
   \item   Subsequent discussion regards \emph{subgroup analysis} -- a topic
@@ -631,6 +631,7 @@ $$\hat{y} \;\; \text{vs.} \;\; \hat{\beta}$$
     \begin{enumerate}
     \item \emph{Sparsity}; estimation error in $g_{0}$ is orthogonal
       to the moments that help estimate $D_{i}$
+    \item Oracle condition is \emph{not} assumed
     \item Sample splitting; account for the overfitting bias from
       high-dimensional approaches
     \end{enumerate}
