--- a/lectures/12_hierarchical_bayes.tex
+++ b/lectures/12_hierarchical_bayes.tex
@@ -478,7 +478,7 @@
   \item The key details:
     \begin{itemize}
     \item In this structure, like with the simple normal example, the
-      estimate for $mu_{l}$ will be shrunk towards the overall mean
+      estimate for $\mu_{l}$ will be shrunk towards the overall mean
       $\mu$. 
     \item This shrinkage will be a function of the relative variance $\sigma^{2}$ and $\eta^{2}$
     \item To do full Bayesian estimation here, recall that we need a
