--- a/lectures/14_synthetic_dind.tex
+++ b/lectures/14_synthetic_dind.tex
@@ -571,7 +571,7 @@
     \begin{equation*}
       (\hat{\mu},\hat{\alpha}, \hat{\gamma}, \hat{\tau}) = \arg\min_{\mu, \gamma, \tau}\sum_{i}\sum_{t}(Y_{it} - \mu -\alpha_{i} - \gamma_{t} - D_{it}\tau)^{2}\hat{\omega}_{i}\hat{\lambda}_{t}
     \end{equation*}
-  \item This approach relaxes the parallel trends assumption by requiring parellel trends in an underlying approximate factor structure
+  \item This approach relaxes the parallel trends assumption by requiring parallel trends in an underlying approximate factor structure
   \end{wideitemize}
 \end{frame}
 
@@ -594,6 +594,8 @@
   model is right) -- e.g. double robust
   \end{wideitemize}
 \end{frame}
+
+
 
 \begin{frame}{So what about synthetic methods?}
   \begin{wideitemize}
@@ -622,7 +624,7 @@
 \begin{frame}{Highly recommend exploring}
   \begin{wideitemize}
   \item Read Cunningham (2021) chapter
-  \item Explore synth and synthdid packages
+  \item Explore augsynth and synthdid  packages (original synth package is tough to use)
   \item Abadie (2020) JEL chapter
   \end{wideitemize}
 \end{frame}
