--- a/homework/Homework4/Homework4.tex
+++ b/homework/Homework4/Homework4.tex
@@ -113,7 +113,7 @@ observations in the $j$th bin of $X$. Then,
 \begin{equation}
   \hat{\sigma}^{2}_{\tau,j} = N_{j}\left(\frac{y_{j(t_{j})}-y_{j(b_{j})}}{2 z_{1-\alpha}}\right)^{2}.
 \end{equation}
-Report the standard error on your three estimates.
+Report the standard error on your estimates, which is calculated as $\sqrt{(V+D)/N}$
 \item Finally, using the NSW dataset, calculate the
   $\tau = (0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9)$ treatment effects, and their
   standard errors.
